<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <RadioGroup
        android:id="@+id/radioGroup2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/drawRadio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/draw" />

        <RadioButton
            android:id="@+id/moveRadio"
            android:layout_width="95dp"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:text="@string/move" />
    </RadioGroup>

    <RadioGroup
        android:id="@+id/shapes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toEndOf="@+id/radioGroup2"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/rectRadio"
            android:layout_width="79dp"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/rect" />

        <RadioButton
            android:id="@+id/circleRadio"
            android:layout_width="86dp"
            android:layout_height="wrap_content"
            android:text="@string/circle" />

        <RadioButton
            android:id="@+id/triangleRadio"
            android:layout_width="103dp"
            android:layout_height="wrap_content"
            android:text="@string/triangle" />
    </RadioGroup>

    <Spinner
        android:id="@+id/colors"
        android:layout_width="wrap_content"
        android:layout_height="47dp"
        android:layout_marginStart="64dp"
        android:entries="@array/colorNames"
        app:layout_constraintBottom_toBottomOf="@+id/shapes"
        app:layout_constraintStart_toEndOf="@+id/shapes"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/undoBtn"
        android:layout_width="606dp"
        android:layout_height="47dp"
        android:layout_marginStart="2dp"
        android:text="@string/undo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/colors"
        app:layout_constraintTop_toTopOf="parent" />

    <com.example.shapes.MyView
        android:id="@+id/myView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup2"></com.example.shapes.MyView>

</androidx.constraintlayout.widget.ConstraintLayout>